# desktop

./: .appveyor.ini  .appveyor.yml  .clang-format  .clang-tidy  .craft.ini  .craft.shelf  .drone-secrets.env.in  .drone.env  .drone.jsonnet  .drone.star  .drone.yml  .git-blame-ignore-revs  .git-blame-ignore-revs.license  .gitattributes  .gitignore  .gitmodules  .swiftformat  .tag  .travis.yml  AGENTS.md  AUTHORS  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING-README  CPackConfig.cmake  CPackOptions.cmake.in  CTestConfig.cmake  ChangeLog  ChangeLog - Legacy  ChangeLog - Legacy.md  ConfigureChecks.cmake  DefineOptions.cmake  INSTALL  IONOS.cmake  Jenkinsfile  LICENSE  MACOS_TOOLTIP_FIX.md  NEXTCLOUD.cmake  (+92 more)
admin/: CMakeLists.txt
admin/linux/: Dockerfile  build-appimage.sh  clean_tarball.sh  count_compiler_warnings.py  travis-build.sh  upload-appimage.sh
admin/nix/: flake.nix
admin/osx/: CMakeLists.txt  DS_Store.in  DS_Store.in.license  container-migration.plist.cmake  craft-client.swift  create_mac.sh.cmake  create_mac_pkg.sh  create_mac_pkg.sh.cmake  deny_autoupdate_com.owncloud.desktopclient.plist  gen_sym_files.py  macdeployqt.py  macosx.entitlements.cmake  macosx.entitlements.cmake.license  macosx.pkgproj  macosx.pkgproj.cmake  macosx.pkgproj.cmake.license  macosx.pkgproj.pkgproj.cmake  make_universal.py  post_install.sh.cmake  pre_install.sh.cmake  sign_app.sh  sign_dmg.sh
admin/test/: wait_for_server.sh
admin/win/: CMakeLists.txt  Toolchain-mingw32-openSUSE.cmake  create_stable_toolchain.sh  docmake.sh  download_runtimes.sh
client/: CMakeLists.txt  csync_auth.c  csync_auth.h  csync_client.c
config/: CMakeLists.txt  csync.conf  csync_exclude.conf  csync_log.conf  ocsync.conf  ocsync_exclude.conf
csync/: CMakeLists.txt  CTestCustom.cmake  ChangeLog  ConfigureChecks.cmake  DefineOptions.cmake  INSTALL  config_csync.h.cmake  config_test.h.cmake
csync/config/: ocsync.conf
csync/csync_doc/: CMakeLists.txt  asciidoc.conf  codeheader.h  doxy.config.in  ocsync.1.txt
csync/doc/: codeheader.c  makeguide.sh  makeman.sh  ocsync.1.txt
csync/src/: CMakeLists.txt  csync.c  csync.h  csync_config.c  csync_dbtree.c  csync_dbtree.h  csync_exclude.c  csync_exclude.h  csync_lock.c  csync_lock.h  csync_log.c  csync_log.h  csync_macros.h  csync_misc.c  csync_misc.h  csync_owncloud.c  csync_owncloud.h  csync_owncloud_private.h  csync_owncloud_recursive_propfind.c  csync_owncloud_util.c  csync_private.h  csync_reconcile.c  csync_rename.cc  csync_rename.h  csync_statedb.c  csync_statedb.h  csync_time.c  csync_time.h  csync_update.c  csync_update.h  csync_util.c  csync_util.h  csync_version.h.in
csync/tests/: CMakeLists.txt  cmdline.c  torture.c  torture.h
doc/: .gitignore  CMakeLists.txt  Makefile  README.md  accountsetup.rst  advancedusage.rst  architecture.rst  asciidoc.conf  autoupdate.rst  branding.rst  building.rst  codeheader.c  codeheader.h  conf.py  conf.py.in  conffile.rst  conflicts.rst  csync.1  csync.1.txt  csync.txt  doxy.config.in  edit-locally.md  envvars.rst  faq.rst  glossary.rst  index.rst  install.rst  installing-linux.rst  installing-macosx.rst  installing-windows.rst  installing.rst  introduction.rst  lowdiskspace.rst  macOS-FinderSync-extension.md  macOS-Sandbox-Qt.md  macOS-development.md  macosvfs.rst  make.bat  makeman.sh  massdeploymentcommandline.rst  (+22 more)
doc/ADR/: 20241007_TrackingWithGA4.md  20250212_UseCostomizationService.md  _template.md
doc/dev/: CMakeLists.txt  Doxyfile.in  Doxyfile.in.license  compiling-on-windows-qt6.rst  main-page.md  sync-algorithm.md
doc/scripts/: README.rst  htmlhelp.reg  htmlhelp.sh
doc/test-cases/: README.md
doc/userguide/: csync.html
docs/: CMakeLists.txt  Makefile  README.md  antora.yml  package.json  site.yml
docs/books/: ownCloud_Desktop_Client_Manual.adoc
iniparser/src/: CMakeLists.txt  dictionary.c  iniparser.c
man/: CMakeLists.txt  nextcloud.1.rst  nextcloudcmd.1.rst  owncloud.1.rst  owncloudcmd.1.rst
modules/: CMakeLists.txt  csync_dummy.c  csync_owncloud.c  csync_owncloud.h  csync_owncloud_recursive_propfind.c  csync_owncloud_util.c  csync_sftp.c  csync_sftp2.c  csync_sftp_libssh.c  csync_smb.c  csync_webdav.c
shell_integration/: CMakeLists.txt
shell_integration/MacOSX/: CMakeLists.txt  FileProviderExt.entitlements.cmake  FileProviderExt.entitlements.cmake.license  FileProviderUIExt.entitlements.cmake  FinderSyncExt.entitlements.cmake  (+6 more)
src/: CMakeLists.txt  CMakeLists.txt.orig  csync.c  csync.h  csync_config.c  csync_config.h  csync_dbtree.c  csync_dbtree.h  csync_exclude.c  csync_exclude.h  csync_journal.c  csync_journal.h  csync_lock.c  csync_lock.h  csync_log.c  csync_log.h  csync_macros.h  csync_misc.c  csync_misc.h  csync_owncloud.c  csync_owncloud_recursive_propfind.c  csync_private.h  csync_propagate.c  csync_propagate.h  csync_reconcile.c  csync_reconcile.h  csync_rename.cc  csync_rename.h  csync_statedb.c  csync_statedb.h  csync_time.c  csync_time.h  csync_update.c  csync_update.h  csync_util.c  csync_util.h  main.cpp
test/: CMakeLists.txt  activitylistmodeltestutils.cpp  activitylistmodeltestutils.h  e2etestsfakecert.pem  e2etestsfakecertprivatekey.pem  e2etestsfakecertpublickey.pem  endtoendtestutils.cpp  endtoendtestutils.h  fake2eelocksucceeded.json  fakefiledrope2eefoldermetadata.json  fakefiledrope2eefoldermetadata.json.license  fakeshortcut.base64  foldermantestutils.cpp  foldermantestutils.h  main.cpp.in  nextcloud_add_test.cmake  oc_bin.h.in  owncloud_add_test.cmake  pushnotificationstestutils.cpp  pushnotificationstestutils.h  sharetestutils.cpp  sharetestutils.h  stub.cpp  stubfolderman.cpp  stubremotewipe.cpp  syncenginetestutils.cpp  syncenginetestutils.h  test_journal.db  testaccount.cpp  testaccountmanager.cpp  testaccountsettings.cpp  testaccountwizardcontroller.cpp  testactivitydata.cpp  testactivitylistmodel.cpp  testallfilesdeleted.cpp  testasyncop.cpp  testblacklist.cpp  testcapabilities.cpp  testcfapishellextensionsipc.cpp  testchecksumvalidator.cpp  (+124 more)
tests/: CMakeLists.txt  cmdline.c  support.c  support.h  torture.c  valgrind-csync.supp
(+4426 files in other folders)
